Made some changes locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your Friend.
+            This is Don's Webapp.
+            <h4>Hi guys</h4>
+           i've made some local changes.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
